# Real-time-raytracing

./: Makefile  README.md  data_prep.py  imgui.ini
GNN/: data.py  model.py
dataset_generation/: Maurice.cpython-38-x86_64-linux-gnu.so.1.0.0  data_prep.py
libMaurice/: CMakeLists.txt
libMaurice/include/: maurice.h
libMaurice/install/include/: maurice.h
libMaurice/install/lib/: libMaurice.so.1  libMaurice.so.1.0.0
libMaurice/src/: maurice.cpp  shape.cpp  shape.h
shaders/: fshader.fs  vshader.vs
src/: main.cpp  utils.cpp  utils.h
